--- a/views/homePage.html
+++ b/views/homePage.html
@@ -48,14 +48,14 @@
           <div class="img">
             <img src="./assets/image/feature1.jpg" class="mt-2 " style="height:100px;" alt="">
           </div>
-          <h3 class="m-3 ">Đề thi</h3>
+          <h3 class="m-3 ">Thi luôn</h3>
           <p class="mx-5 my-3">
             Ngân hàng câu hỏi đầy đủ các môn cấp 1,2,3 được trộn tạo đề theo cấu trúc phân loại giúp các em
             dễ dàng ôn tập online đề thi giữa học kỳ, thi học kỳ theo các chủ đề đã học.
           </p>
           <div class="m-3 ">
             <button class="btn btn-info ">
-              <a href="./quizz.html" class="text-decoration-none text-light ">Làm ngay</a>
+              <a href="#!/quizz" class="text-decoration-none text-light ">Làm ngay</a>
             </button>
           </div>
         </div>
@@ -63,14 +63,14 @@
           <div class="img">
             <img src="/assets/image/feature2.jpg" class="mt-2 " style="height:100px;" alt="">
           </div>
-          <h3 class="m-3 ">Đề thi</h3>
+          <h3 class="m-3 ">Chọn đề thi</h3>
           <p class="mx-5 my-3">
             Ngân hàng câu hỏi đầy đủ các môn cấp 1,2,3 được trộn tạo đề theo cấu trúc phân loại giúp các em
             dễ dàng ôn tập online đề thi giữa học kỳ, thi học kỳ theo các chủ đề đã học.
           </p>
           <div class="m-3 ">
             <button class="btn btn-info ">
-              <a href="./quizz.html" class="text-decoration-none text-light ">Làm ngay</a>
+              <a href="#!/filter" class="text-decoration-none text-light ">chọn ngay</a>
             </button>
           </div>
         </div>
@@ -85,7 +85,7 @@
           </p>
           <div class="m-3 ">
             <button class="btn btn-info ">
-              <a href="./quizz.html" class="text-decoration-none text-light ">Làm ngay</a>
+              <a href="#!/quizz" class="text-decoration-none text-light ">Làm ngay</a>
             </button>
           </div>
         </div>
@@ -106,7 +106,7 @@
             <span>JavaScript</span>
           </div>
           <div class="quiz-moreInfo">
-            <a href="./category.html"  class="btn btn-info ">Xem thêm</a>
+            <a href="#!/category"  class="btn btn-info ">Xem thêm</a>
           </div>
         </div>
         <div class="section-quizzes my-2 ">
@@ -127,7 +127,7 @@
                 <p>JavaScript Cơ bản</p>
               </div>
               <div class="text-center mb-2 ">
-                   <a href="./quizz.html" class="btn btn-danger ">Làm ngay</a>
+                   <a href="#!/quizz" class="btn btn-danger ">Làm ngay</a>
               </div>
             </div>
             <div class="solo-quizz col border border-1 rounded bg-light mx-2 shadow-sm bg-body rounded">
@@ -146,7 +146,7 @@
                 <p>JavaScript Cơ bản</p>
               </div>
               <div class="text-center mb-2 ">
-                   <a href="./quizz.html" class="btn btn-danger ">Làm ngay</a>
+                   <a href="#!/quizz" class="btn btn-danger ">Làm ngay</a>
               </div>
             </div>
             <div class="solo-quizz col border border-1 rounded bg-light mx-2 shadow-sm bg-body rounded">
@@ -165,7 +165,7 @@
                 <p>JavaScript Cơ bản</p>
               </div>
               <div class="text-center mb-2 ">
-                   <a href="./quizz.html" class="btn btn-danger ">Làm ngay</a>
+                   <a href="#!/quizz" class="btn btn-danger ">Làm ngay</a>
               </div>
             </div>
             <div class="solo-quizz col border border-1 rounded bg-light mx-2 shadow-sm bg-body rounded">
@@ -184,7 +184,7 @@
                 <p>JavaScript Cơ bản</p>
               </div>
               <div class="text-center mb-2 ">
-                   <a href="./quizz.html" class="btn btn-danger ">Làm ngay</a>
+                   <a href="#!/quizz" class="btn btn-danger ">Làm ngay</a>
               </div>
             </div>
             <div class="solo-quizz col border border-1 rounded bg-light mx-2 shadow-sm bg-body rounded">
@@ -203,7 +203,7 @@
                 <p>JavaScript Cơ bản</p>
               </div>
               <div class="text-center mb-2 ">
-                   <a href="./quizz.html" class="btn btn-danger ">Làm ngay</a>
+                   <a href="#!/quizz" class="btn btn-danger ">Làm ngay</a>
               </div>
             </div>
             <div class="solo-quizz col border border-1 rounded bg-light mx-2 shadow-sm bg-body rounded">
@@ -222,7 +222,7 @@
                 <p>JavaScript Cơ bản</p>
               </div>
               <div class="text-center mb-2 ">
-                   <a href="./quizz.html" class="btn btn-danger ">Làm ngay</a>
+                   <a href="#!/quizz" class="btn btn-danger ">Làm ngay</a>
               </div>
             </div>
           </div>
@@ -238,7 +238,7 @@
             <span>JavaScript</span>
           </div>
           <div class="quiz-moreInfo">
-            <a href=./category.html"" class="btn btn-info ">Xem thêm</a>
+            <a href=#./category"" class="btn btn-info ">Xem thêm</a>
           </div>
         </div>
         <div class="section-quizzes my-2">
@@ -259,7 +259,7 @@
                 <p>JavaScript Cơ bản</p>
               </div>
               <div class="text-center mb-2 ">
-                   <a href="./quizz.html" class="btn btn-danger ">Làm ngay</a>
+                   <a href="#!/quizz" class="btn btn-danger ">Làm ngay</a>
               </div>
             </div>
             <div class="solo-quizz col border border-1 rounded bg-light mx-2 shadow-sm bg-body rounded">
@@ -278,7 +278,7 @@
                 <p>JavaScript Cơ bản</p>
               </div>
               <div class="text-center mb-2 ">
-                   <a href="./quizz.html" class="btn btn-danger ">Làm ngay</a>
+                   <a href="#!/quizz" class="btn btn-danger ">Làm ngay</a>
               </div>
             </div>
             <div class="solo-quizz col border border-1 rounded bg-light mx-2 shadow-sm bg-body rounded">
@@ -297,7 +297,7 @@
                 <p>JavaScript Cơ bản</p>
               </div>
               <div class="text-center mb-2 ">
-                   <a href="./quizz.html" class="btn btn-danger ">Làm ngay</a>
+                   <a href="#!/quizz" class="btn btn-danger ">Làm ngay</a>
               </div>
             </div>
             <div class="solo-quizz col border border-1 rounded bg-light mx-2 shadow-sm bg-body rounded">
@@ -316,7 +316,7 @@
                 <p>JavaScript Cơ bản</p>
               </div>
               <div class="text-center mb-2 ">
-                   <a href="./quizz.html" class="btn btn-danger ">Làm ngay</a>
+                   <a href="#!/quizz" class="btn btn-danger ">Làm ngay</a>
               </div>
             </div>
             <div class="solo-quizz col border border-1 rounded bg-light mx-2 shadow-sm bg-body rounded">
@@ -335,7 +335,7 @@
                 <p>JavaScript Cơ bản</p>
               </div>
               <div class="text-center mb-2 ">
-                   <a href="./quizz.html" class="btn btn-danger ">Làm ngay</a>
+                   <a href="#!/quizz" class="btn btn-danger ">Làm ngay</a>
               </div>
             </div>
             <div class="solo-quizz col border border-1 rounded bg-light mx-2 shadow-sm bg-body rounded">
@@ -354,7 +354,7 @@
                 <p>JavaScript Cơ bản</p>
               </div>
               <div class="text-center mb-2 ">
-                   <a href="./quizz.html" class="btn btn-danger ">Làm ngay</a>
+                   <a href="#!/quizz" class="btn btn-danger ">Làm ngay</a>
               </div>
             </div>
           </div>
@@ -369,7 +369,7 @@
             <span>JavaScript</span>
           </div>
           <div class="quiz-moreInfo">
-            <a href=./category.html"" class="btn btn-info ">Xem thêm</a>
+            <a href=#./category"" class="btn btn-info ">Xem thêm</a>
           </div>
         </div>
         <div class="section-quizzes my-2">
@@ -390,7 +390,7 @@
                 <p>JavaScript Cơ bản</p>
               </div>
               <div class="text-center mb-2 ">
-                   <a href="./quizz.html" class="btn btn-danger ">Làm ngay</a>
+                   <a href="#!/quizz" class="btn btn-danger ">Làm ngay</a>
               </div>
             </div>
             <div class="solo-quizz col border border-1 rounded bg-light mx-2 shadow-sm bg-body rounded">
@@ -409,7 +409,7 @@
                 <p>JavaScript Cơ bản</p>
               </div>
               <div class="text-center mb-2 ">
-                   <a href="./quizz.html" class="btn btn-danger ">Làm ngay</a>
+                   <a href="#!/quizz" class="btn btn-danger ">Làm ngay</a>
               </div>
             </div>
             <div class="solo-quizz col border border-1 rounded bg-light mx-2 shadow-sm bg-body rounded">
@@ -428,7 +428,7 @@
                 <p>JavaScript Cơ bản</p>
               </div>
               <div class="text-center mb-2 ">
-                   <a href="./quizz.html" class="btn btn-danger ">Làm ngay</a>
+                   <a href="#!/quizz" class="btn btn-danger ">Làm ngay</a>
               </div>
             </div>
             <div class="solo-quizz col border border-1 rounded bg-light mx-2 shadow-sm bg-body rounded">
@@ -447,7 +447,7 @@
                 <p>JavaScript Cơ bản</p>
               </div>
               <div class="text-center mb-2 ">
-                   <a href="./quizz.html" class="btn btn-danger ">Làm ngay</a>
+                   <a href="#!/quizz" class="btn btn-danger ">Làm ngay</a>
               </div>
             </div>
             <div class="solo-quizz col border border-1 rounded bg-light mx-2 shadow-sm bg-body rounded">
@@ -466,7 +466,7 @@
                 <p>JavaScript Cơ bản</p>
               </div>
               <div class="text-center mb-2 ">
-                   <a href="./quizz.html" class="btn btn-danger ">Làm ngay</a>
+                   <a href="#!/quizz" class="btn btn-danger ">Làm ngay</a>
               </div>
             </div>
             <div class="solo-quizz col border border-1 rounded bg-light mx-2 shadow-sm bg-body rounded">
@@ -485,7 +485,7 @@
                 <p>JavaScript Cơ bản</p>
               </div>
               <div class="text-center mb-2 ">
-                   <a href="./quizz.html" class="btn btn-danger ">Làm ngay</a>
+                   <a href="#!/quizz" class="btn btn-danger ">Làm ngay</a>
               </div>
             </div>
           </div>
