--- a/views/login.html
+++ b/views/login.html
@@ -2,7 +2,7 @@
 <div class="container-fluid bg-info mt-1 " style="height: 40px;">
     <div class="container pt-1">
         <ul class="breadcrumb">
-          <li class="breadcrumb-item"><a href=".index.html">Trang chủ</a></li>
+          <li class="breadcrumb-item"><a href="#!/">Trang chủ</a></li>
           <li class="breadcrumb-item active">Đăng nhập</li>
         </ul>
     </div>
@@ -49,7 +49,7 @@
                       </div>
                       <div class="col-6">
                         <div class="text-end">
-                          <a href="#!/forgot.html" class="link-secondary text-decoration-none">Quên mật khẩu?</a>
+                          <a href="#!/forgot" class="link-secondary text-decoration-none">Quên mật khẩu?</a>
                         </div>
                       </div>
                     </div>
