--- a/views/resetPass.html
+++ b/views/resetPass.html
@@ -2,7 +2,7 @@
     <div class="container-fluid bg-info mt-1 " style="height: 40px;">
         <div class="container pt-1">
             <ul class="breadcrumb">
-              <li class="breadcrumb-item"><a href="./index.html">Trang chủ</a></li>
+              <li class="breadcrumb-item"><a href="#!/">Trang chủ</a></li>
               <li class="breadcrumb-item"><a href="./login.html">Đăng nhập</a></li>
               <li class="breadcrumb-item active">Mật khẩu mới</li>
             </ul>
