--- a/views/Q&A.html
+++ b/views/Q&A.html
@@ -10,17 +10,72 @@
 
   <!-- Q&A-->
 
-  <div class="container mt-5" style="height: 300px;">
+  <div class="container mt-5" style="height: 1000px;">
     <h3>Hỏi đáp</h3>
     <ul class="list-group">
       <li class="list-group-item">
-        <a href="" class="text-decoration-none text-black fs-4 ">Fix login issues on websites that require a username and password </a>
-      </li>
-      <li class="list-group-item">
-        <a href="" class="text-decoration-none text-black fs-4 ">Fix login issues on websites that require a username and password </a>
-      </li>
-      <li class="list-group-item">
-        <a href="" class="text-decoration-none text-black fs-4 ">Fix login issues on websites that require a username and password </a>
+        <div class="container">
+          <div>
+            <div class="card mb-4 d-flex flex-row ">
+              <div>
+                <a href="">
+                  <img src="/assets/image/feature1.jpg" class="card-img-top" alt="Ảnh bài viết">
+                </a>
+              </div>
+              <div class="card-body">
+                <a href="">
+                  <h5 class="card-title">Tiêu đề bài viết 1</h5>
+                </a>
+                <p class="card-text">Nội dung bài viết 1</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card mb-4 d-flex flex-row ">
+              <div>
+                <a href="">
+                  <img src="/assets/image/feature1.jpg" class="card-img-top" alt="Ảnh bài viết">
+                </a>
+              </div>
+              <div class="card-body">
+                <a href="">
+                  <h5 class="card-title">Tiêu đề bài viết 1</h5>
+                </a>
+                <p class="card-text">Nội dung bài viết 1</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card mb-4 d-flex flex-row ">
+              <div>
+                <a href="">
+                  <img src="/assets/image/feature1.jpg" class="card-img-top" alt="Ảnh bài viết">
+                </a>
+              </div>
+              <div class="card-body">
+                <a href="">
+                  <h5 class="card-title">Tiêu đề bài viết 1</h5>
+                </a>
+                <p class="card-text">Nội dung bài viết 1</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card mb-4 d-flex flex-row ">
+              <div>
+                <a href="">
+                  <img src="/assets/image/feature1.jpg" class="card-img-top" alt="Ảnh bài viết">
+                </a>
+              </div>
+              <div class="card-body">
+                <a href="">
+                  <h5 class="card-title">Tiêu đề bài viết 1</h5>
+                </a>
+                <p class="card-text">Nội dung bài viết 1</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </li>
     </ul>
   </div>
