--- a/views/login.html
+++ b/views/login.html
@@ -23,17 +23,17 @@
           <div class="row gy-5 justify-content-center">
             <div class="col-12 col-lg-5">
               <!-- Login Form -->
-              <form action="" onsubmit="setLoginInfo()">
+              <form >
                 <div class="row gy-3 overflow-hidden">
                   <div class="col-12">
                     <div class="form-floating mb-3">
-                      <input type="email" class="form-control border-0 border-bottom rounded-0" name="email" id="email" placeholder="name@example.com" required>
+                      <input type="email" class="form-control border-0 border-bottom rounded-0" name="email" id="email" placeholder="name@example.com" ng-model="user.email" required>
                       <label for="email" class="form-label">Email</label>
                     </div>
                   </div>
                   <div class="col-12">
                     <div class="form-floating mb-3">
-                      <input type="password" class="form-control border-0 border-bottom rounded-0" name="password" id="password" value="" placeholder="Password" required>
+                      <input type="password" class="form-control border-0 border-bottom rounded-0" name="password" id="password" placeholder="Password" ng-model="user.password" required>
                       <label for="password" class="form-label">Mật khẩu</label>
                     </div>
                   </div>
@@ -56,7 +56,7 @@
                   </div>
                   <div class="col-12">
                     <div class="d-grid">
-                      <input type="submit" class="btn btn-lg btn-dark rounded-0 fs-6" value="Đăng nhập ">
+                      <button type="button" class="btn btn-lg btn-dark rounded-0 fs-6" ng-click="login()">Đăng nhập</button>
                     </div>
                   </div>
                 </div>
